tests/dataset/tpc-ds/compiler/st/q90.st.out
Smalltalk at: #amc put: nil.
Smalltalk at: #household_demographics put: nil.
Smalltalk at: #pmc put: nil.
Smalltalk at: #result put: nil.
Smalltalk at: #time_dim put: nil.
Smalltalk at: #web_page put: nil.
Smalltalk at: #web_sales put: nil.

Object subclass: #Main instanceVariableNames: '' classVariableNames: '' poolDictionaries: '' category: nil!

!Main class methodsFor: 'types'!
newWebSale: ws_sold_time_sk ws_ship_hdemo_sk: ws_ship_hdemo_sk ws_web_page_sk: ws_web_page_sk | dict |
	dict := Dictionary new.
	dict at: 'ws_sold_time_sk' put: ws_sold_time_sk.
	dict at: 'ws_ship_hdemo_sk' put: ws_ship_hdemo_sk.
	dict at: 'ws_web_page_sk' put: ws_web_page_sk.
	^ dict
!
!Main class methodsFor: 'tests'!
test_TPCDS_Q90_ratio
	((result = 2.000000)) ifFalse: [ self error: 'expect failed' ]
!

!Main class methodsFor: 'runtime'!
__count: v
	(v respondsTo: #size) ifTrue: [ ^ v size ]
	^ self error: 'count() expects collection'
!
_cast: type value: v
	^ v
!
!!
web_sales := Array with: (Dictionary from: {'ws_sold_time_sk' -> 1. 'ws_ship_hdemo_sk' -> 1. 'ws_web_page_sk' -> 10}) with: (Dictionary from: {'ws_sold_time_sk' -> 1. 'ws_ship_hdemo_sk' -> 1. 'ws_web_page_sk' -> 10}) with: (Dictionary from: {'ws_sold_time_sk' -> 2. 'ws_ship_hdemo_sk' -> 1. 'ws_web_page_sk' -> 10}).
household_demographics := Array with: (Dictionary from: {'hd_demo_sk' -> 1. 'hd_dep_count' -> 2}).
time_dim := Array with: (Dictionary from: {'t_time_sk' -> 1. 't_hour' -> 7}) with: (Dictionary from: {'t_time_sk' -> 2. 't_hour' -> 14}).
web_page := Array with: (Dictionary from: {'wp_web_page_sk' -> 10. 'wp_char_count' -> 5100}).
amc := (Main __count: ((| res |
res := OrderedCollection new.
((web_sales) select: [:ws | ((((((((((((t at: 't_hour' >= 7) and: [t at: 't_hour']) <= 8) and: [hd at: 'hd_dep_count']) = 2) and: [wp at: 'wp_char_count']) >= 5000) and: [wp at: 'wp_char_count']) <= 5200) and: [(ws at: 'ws_ship_hdemo_sk' = hd at: 'hd_demo_sk')]) and: [(ws at: 'ws_sold_time_sk' = t at: 't_time_sk')]) and: [(ws at: 'ws_web_page_sk' = wp at: 'wp_web_page_sk')])]) do: [:ws |
	(household_demographics) do: [:hd |
		(time_dim) do: [:t |
			(web_page) do: [:wp |
				res add: ws.
			]
		]
	]
]
res := res asArray.
res))).
pmc := (Main __count: ((| res |
res := OrderedCollection new.
((web_sales) select: [:ws | ((((((((((((t at: 't_hour' >= 14) and: [t at: 't_hour']) <= 15) and: [hd at: 'hd_dep_count']) = 2) and: [wp at: 'wp_char_count']) >= 5000) and: [wp at: 'wp_char_count']) <= 5200) and: [(ws at: 'ws_ship_hdemo_sk' = hd at: 'hd_demo_sk')]) and: [(ws at: 'ws_sold_time_sk' = t at: 't_time_sk')]) and: [(ws at: 'ws_web_page_sk' = wp at: 'wp_web_page_sk')])]) do: [:ws |
	(household_demographics) do: [:hd |
		(time_dim) do: [:t |
			(web_page) do: [:wp |
				res add: ws.
			]
		]
	]
]
res := res asArray.
res))).
result := (((Main _cast: 'float' value: amc)) / ((Main _cast: 'float' value: pmc))).
(result toJSON) displayOn: Transcript. Transcript cr.
Main test_TPCDS_Q90_ratio.
